# ai-developer-learning-plan

./: .gitignore  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/classroom_notebooks/: README.md
demos/executive_decks/: README.md
phase1_foundations/: readme.md
phase1_foundations/flask_container/: Dockerfile  app.py
phase1_foundations/git_collab/: README.md
phase1_foundations/python_basics/: calculator.py  file_parser.py  sample_data.csv
phase2_llm_prompting/chatbot_app_full_stack/: README.md
phase2_llm_prompting/chatbot_faq/: chatbot.py
phase2_llm_prompting/doc_qa_assistant/: qa_chain.py
phase2_llm_prompting/intelligent_contract_review_assistant/: ARCHITECTURE.md  README.md  start.ps1
phase2_llm_prompting/math_tutor_bot/: ARCHITECTURE.md  README.md
phase2_llm_prompting/math_tutor_bot/backend/: main.py  (+2 more)
phase2_llm_prompting/multimodal_captioner/: README.md
phase2_llm_prompting/policy_analyzer/: .env.example  ARCHITECTURE.md  app.py  few_shot_examples.py  requirements.txt
phase2_llm_prompting/resume_enhancer/: enhancer.py
phase3_ml_basics/clustering/: kmeans.py
phase3_ml_basics/regression/: linear_regression.py
phase3_ml_basics/spam_classifier/: train.py
phase4_rag_agents/enterprise_rag/: pipeline.py
phase4_rag_agents/semantic_search/: search_demo.py
phase4_rag_agents/workflow_agent/: agent.py
phase5_deployment/fastapi_service/: main.py  requirements.txt
phase5_deployment/monitoring_dashboard/: dashboard.py
phase5_deployment/secure_pipeline/: auth.py
(+63 files in other folders)
