[project]
name = "ai-developer-learning-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "chromadb>=1.5.9",
    "docker>=7.1.0",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "groq<1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pinecone[grpc]>=9.0.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "ruff>=0.15.15",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
